Use List.of() instead